Removed unnecessary files and folders
Cpplib.dll and Mrcrosoft.VC143.CRT were duplicates of same file/folder from one level above, which has been used by docker-compose

--- a/SignalRCppLibService/Dockerfile
+++ b/SignalRCppLibService/Dockerfile
@@ -4,11 +4,9 @@
 #For more information, please see https://aka.ms/containercompat
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0.1-nanoserver-20H2 AS base
-COPY ./Microsoft.VC143.CRT/ ./Windows/System32/
+COPY ./Microsoft.VC143.CRT/ ./Windows/System32/ # Alternatively I can try to download and install Visual Studio with vc redist to servercore and then copy needed dlls to nanoserver
 WORKDIR /app
-COPY CppLib.dll .
 EXPOSE 80
-EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
@@ -23,5 +21,6 @@ RUN dotnet publish "SignalRCppLibService.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
+COPY CppLib.dll .
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "SignalRCppLibService.dll"]
